@@ -11,11 +11,10 @@ import org.json.JSONObject;
 public class Leaderboard {
 
 	private Map<String, Integer> languageMap;
-	private List<CodinGamer> gamers;
+	private List<Contestant> contestants;
 	
 	private Puzzle puzzle;
-	
-	@SuppressWarnings("unchecked")
+
 	public Leaderboard(Puzzle puzzle, JSONObject json) {
 		if(json.has("id") && json.has("message")) {
 			if(json.getInt("id") == -1 && json.getString("message").equals("internal error")) {
@@ -24,16 +23,14 @@ public class Leaderboard {
 		}
 		JSONObject langs = json.getJSONObject("programmingLanguages");
 		this.languageMap = new HashMap<>();
-		this.gamers = json.getJSONArray("users")
-				  		  .toList()
-				  		  .stream()
-				  		  .map(Map.class::cast)
-				  		  .map(m -> (Map<String,Object>)m.get("codingamer"))
-				  		  .map(user -> new CodinGamer(
-				  				  (String)user.get("pseudo"), 
-				  				  (String)user.get("publicHandle"), 
-				  				  String.valueOf(user.get("avatar")))
-				  		  ).collect(Collectors.toList());
+		this.contestants = json.getJSONArray("users")
+				  		  	   .toList()
+				  		  	   .stream()
+				  		  	   .map(Map.class::cast)
+				  		  	   .map(JSONObject::new)
+				  		  	   .filter(j -> j.has("agentId"))
+				  		  	   .map(Contestant::new)
+				  		  	   .collect(Collectors.toList());
 		
 		for(String key : langs.keySet()) {
 			languageMap.put(key, langs.getInt(key));
@@ -42,8 +39,8 @@ public class Leaderboard {
 	public Map<String, Integer> getLanguages() {
 		return Collections.unmodifiableMap(this.languageMap);
 	}
-	public List<CodinGamer> getUsers() {
-		return Collections.unmodifiableList(this.gamers);
+	public List<Contestant> getContestants() {
+		return Collections.unmodifiableList(this.contestants);
 	}
 	public Puzzle getPuzzle() {
 		return puzzle;
